# murmr

./: .gitignore  .ralph-prompt  .ralph-prompt-tauri  CLAUDE.md  CONTEXT.md  Cargo.toml  INSTALL.md  LICENSE  RALPH_PROMPT.md  RALPH_PROMPT_V2.md  README.md
crates/murmer-app/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
crates/murmer-app/capabilities/: default.json
crates/murmer-app/icons/: icon.icns
crates/murmer-app/src/: commands.rs  main.rs  recording.rs  state.rs  transcripts.rs
crates/murmer-core/: Cargo.toml
crates/murmer-core/src/: cli.rs  config.rs  lib.rs
crates/murmer-core/src/audio/: capture.rs
crates/murmer-core/src/dictionary/: learner.rs  mod.rs  store.rs  vocabulary.rs
crates/murmer-core/src/input/: hotkey.rs  mod.rs  paste.rs
crates/murmer-core/src/llm/: client.rs  prompts.rs
crates/murmer-core/src/modes/: context.rs  engine.rs  extractor.rs  mod.rs  registry.rs
macos/: Info.plist
scripts/: bundle-macos.sh  install-linux.sh
src/: config.rs  main.rs  tray.rs
src/audio/: capture.rs  vad.rs
src/dictionary/: mod.rs
src/input/: hotkey.rs  paste.rs
src/llm/: client.rs  prompts.rs
src/modes/: engine.rs  extractor.rs  registry.rs
src/stt/: whisper.rs
ui/: app.js  index.html  pill.css  pill.html  pill.js  style.css
