[package]
name = "murmer"
version = "0.1.0"
edition = "2021"
authors = ["Arvind Maan"]
description = "Local voice-to-text with LLM cleanup. No cloud, no Electron, just speech to clean text."
license = "MIT"
repository = "https://github.com/arvinmaa/murmer"
keywords = ["voice", "dictation", "whisper", "local", "linux"]
categories = ["multimedia::audio", "text-processing"]

[features]
default = ["audio", "stt", "hotkeys"]
audio = ["dep:cpal"]
stt = ["dep:whisper-rs"]
vad = ["dep:ort", "dep:ndarray"]
hotkeys = ["dep:rdev"]
tray = ["dep:ksni"]
integration = []

[dependencies]
# Audio (feature-gated)
cpal = { version = "0.15", optional = true }

# STT (feature-gated)
whisper-rs = { version = "0.12", optional = true }

# VAD (feature-gated)
ort = { version = "2.0.0-rc.12", features = ["load-dynamic"], optional = true }
ndarray = { version = "0.16", optional = true }

# LLM client (always available)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Hotkeys (feature-gated)
rdev = { version = "0.5", optional = true }

# Config (always available)
toml = "0.8"
dirs = "6"

# System tray (Linux only, feature-gated)
[target.'cfg(target_os = "linux")'.dependencies]
ksni = { version = "0.2", optional = true }

# Async runtime (always available)
tokio = { version = "1", features = ["full"] }

# Logging (always available)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI (always available)
clap = { version = "4", features = ["derive"] }

# Error handling (always available)
anyhow = "1"
thiserror = "2"

[dev-dependencies]
mockito = "1"
tempfile = "3"
tokio-test = "0.4"

[package.metadata.bundle]
name = "murmer"
identifier = "com.arvmaan.murmer"
icon = ["icons/icon.icns"]
category = "public.app-category.utilities"
short_description = "Local voice-to-text with LLM cleanup"
copyright = "2026 Arvind Maan"

[profile.release]
opt-level = 3
lto = true
strip = true
