[package]
name = "murmer-core"
version = "0.1.0"
edition = "2021"
authors = ["Arvind Maan"]
description = "Core library for murmer — local voice-to-text with LLM cleanup"
license = "MIT"

[features]
default = ["audio", "stt", "hotkeys"]
audio = ["dep:cpal"]
stt = ["dep:whisper-rs"]
vad = ["dep:ort", "dep:ndarray"]
hotkeys = ["dep:rdev"]
tray = ["dep:ksni"]
bedrock = ["dep:aws-sdk-bedrockruntime", "dep:aws-config"]

[dependencies]
cpal = { version = "0.15", optional = true }
whisper-rs = { version = "0.12", optional = true }
ort = { version = "2.0.0-rc.12", features = ["load-dynamic"], optional = true }
ndarray = { version = "0.16", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rdev = { version = "0.5", optional = true }
toml = "0.8"
dirs = "6"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
aws-sdk-bedrockruntime = { version = "1", optional = true }
aws-config = { version = "1", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
ksni = { version = "0.2", optional = true }

[dev-dependencies]
mockito = "1"
tempfile = "3"
tokio-test = "0.4"

[[bin]]
name = "murmer"
path = "src/cli.rs"
